--- a/Projeto-Login/estilos/login.css
+++ b/Projeto-Login/estilos/login.css
@@ -4,3 +4,49 @@
     --verde: #49a09d;
     --lilas: #5f2c82;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box; /* Isso faz com que a borda faça parte da conta de largura, por padrão ele testa por dentro da borda */
+}
+
+body, html {
+    background-color: var(--lilas);
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    overflow: hidden; /* Isto é tudo que estiver fora da borda vai ficar invisivel */
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
+    transition: width .3s, height .3s;
+    transition-timing-function: ease; /* Suavizar A Animação */
+}
+
+section#login div#imagem {
+    display: block; /* Visualmente não vai mudar nada, mas estrategicamente vale a pena */
+    background: var(--lilas) url(../imagens/img.jpg) no-repeat right center;
+    background-size: cover;
+    height: 200px;
+}
+
+section#login div#formulario {
+    display: block; /* Visualmente não vai mudar nada, mas estrategicamente vale a pena */
+    padding: 10px;
+}
