--- a/Projeto-Login/estilos/login.css
+++ b/Projeto-Login/estilos/login.css
@@ -31,7 +31,7 @@ section#login {
     overflow: hidden; /* Isto é tudo que estiver fora da borda vai ficar invisivel */
     transform: translate(-50%, -50%);
     background-color: white;
-    width: 250px;
+    width: 252px;
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
@@ -49,4 +49,13 @@ section#login div#imagem {
 section#login div#formulario {
     display: block; /* Visualmente não vai mudar nada, mas estrategicamente vale a pena */
     padding: 10px;
+}
+
+div#formulario h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario p {
+    font-size: 0.8em;
 }
